fixes for some files

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,18 +1,14 @@
 FROM python:3
 
-RUN useradd -m -d /application backend
+RUN useradd -m -d /app backend
 RUN apt-get -q update -y && apt-get -q install -y gettext-base
 
 USER backend
-WORKDIR /application
+WORKDIR /app
+RUN python3 pip install flask
 
 COPY . .
+
 EXPOSE 5000
-CMD python3 web.py
 
-# COPY . /application/app
-# RUN python -m pip install flask
-
-# WORKDIR /application/app
-# CMD ["/bin/bash", "start.sh"]
-# CMD [ "python", "./web.py" ]
+CMD ["/bin/bash", "start.sh"]
