--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3"
 services:
   app:
-    image: clintonwong/app-backend:latest
+    build: app
     container_name: app
     env_file: my_vars.env
 
   nginx:
-    image: clintonwong/web-frontend:latest
+    build: html
     container_name: web
     env_file: my_vars.env
     ports:
-      - 8080:80
+      - 9000
     expose:
-      - 8080
+      - 9000
     depends_on:
       - app
