--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3"
 services:
   app:
-    build: app
+    image: clintonwong/app-backend:latest
     container_name: app
     env_file: my_vars.env
 
   nginx:
-    build: html
+    image: clintonwong/app-frontend:latest
     container_name: web
     env_file: my_vars.env
     ports:
-      - 9000
+      - 8000:80
     expose:
-      - 9000
+      - 8080
     depends_on:
       - app
